--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,9 @@
         </testsuite>
     </testsuites>
     <filter>
+        <whitelist>
+            <directory>src</directory>
+        </whitelist>
         <blacklist>
             <directory>vendor</directory>
             <directory>test</directory>
