--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "piphp/gpio",
+    "name": "christianlet/gpio",
     "description": "A library for accessing the GPIO pins on a Raspberry Pi",
     "keywords": ["gpio", "pi", "raspberry", "pin", "pins"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Andrew Carter",
-            "email": "andrewcarter1992@gmail.com"
+            "name": "Christian Letourneau",
+            "email": "let968@gmail.com"
         }
     ],
     "autoload": {
