Require composer installers

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
         "psr-4": {
             "PiPHP\\Test\\GPIO\\": "test/"
         }
+    },
+    "require": {
+        "composer/installers": "^1.9"
     }
 }
