--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         }
     },
     "require": {
-        "composer/installers": "^1.9"
+        "composer/installers": "^1.9",
+        "phpunit/phpunit": "^9.2"
     }
 }
