--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,13 @@
         "psr-4": {
             "PiPHP\\Test\\GPIO\\": "test/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
+    },
+    "scripts": {
+        "test": [
+            "php vendor/bin/phpunit"
+        ]
     }
 }
