--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
             "PiPHP\\Test\\GPIO\\": "test/"
         }
     },
+    "require": {
+        "php": "^7.3"
+    },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^9.3"
     },
     "scripts": {
         "test": [
