--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require": {
-        "php": "^7.3"
+        "php": "^7.3||^7.4||^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3"
